--- a/components/window/window.module.css
+++ b/components/window/window.module.css
@@ -23,7 +23,7 @@
   left: 0;
   z-index: 100;
   width: 100%!important;
-  height: 100%!important;
+  height: calc(100% - 40px)!important;
   user-select: none;
 }
 
